Bug 292042 - TreeView to diagram class drag problem
Summary: TreeView to diagram class drag problem
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-20 15:15 UTC by Ralf Habacker
Modified: 2013-11-02 17:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2012-01-20 15:15:19 UTC
Version:           unspecified (using Devel) 
OS:                All

In recent svn versions there are problems with draging item from the tree view into a diagram. 

Reproducible: Always

Steps to Reproduce:
1. Create a package in the tree view. 
2. Create a class below the tree view.
3. drag the class into the diagram 

Actual Results:  
The package to which the class belongs is dragged onto the diagram. 


Expected Results:  
The class from which the drag has been started should be dragged onto the diagram.
Comment 1 Ralf Habacker 2012-01-20 15:19:35 UTC
Further investigation shows that the class created below the package in the tree view is not connected to the package.

Creating a package and class on the diagram and assigning the class to the package through the class property dialog do not have this problem. 

The real problem is the missing relation on class creation.
Comment 2 Oliver Kellogg 2012-02-28 19:02:53 UTC
Cannot reproduce this using trunk >= r1281004.

I do however see a different problem with current trunk:

On creating new Class/Interface/Enum/Datatype/Package using RMB in listview and pressing <Enter> on the default name, although the object appears in the listview it seems to be in a half created state (cannot drag to diagram.)

On editing the default name before pressing <Enter>, everything is alright.
Comment 3 Oliver Kellogg 2012-03-18 20:55:09 UTC
(In reply to comment #2)
> [...]
> On creating new Class/Interface/Enum/Datatype/Package using RMB in listview
> and pressing <Enter> on the default name, although the object appears in the
> listview it seems to be in a half created state (cannot drag to diagram.)
> 
> On editing the default name before pressing <Enter>, everything is alright.

Also, when pressing <Enter> on the default name and then attempting RMB -> Rename,
the persistent editor mode is entered and never left again.
Comment 4 Ralf Habacker 2012-11-22 20:42:17 UTC
The problem is still present on recent svn
Comment 5 Ralf Habacker 2012-11-22 21:17:43 UTC
The problem is that in recent code the <enter> key is not been catched.  This belongs also for other key or mouse events changing the current edited list view entry.
Comment 6 Ralf Habacker 2012-11-23 06:20:13 UTC
SVN commit 1325910 by habacker:

Fixed bug.


 M  +1 -0      umllistview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1325910