Fixed bug.

BUG:292042

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1325910